[package]
name = "rustls-acme"
version = "0.14.0"
authors = ["Florian Uekermann <florian@uekermann.me>"]
edition = "2018"
description = "TLS certificate management and serving using rustls"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FlorianUekermann/rustls-acme"
documentation = "https://docs.rs/rustls-acme"
keywords = ["acme", "rustls", "tls", "letsencrypt"]
categories = ["asynchronous", "cryptography", "network-programming"]

[dependencies]
futures-rustls = { version = "0.26", default-features = false }
futures = "0.3"
rcgen = { version = "0.14", default-features = false, features = [
  "pem",
  "x509-parser",
  "crypto",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ring = { version = "0.17", features = ["std"], optional = true }
aws-lc-rs = { version = "1.13", optional = true, default-features = false, features = [
  "aws-lc-sys",
] }
base64 = "0.22"
log = "0.4"
webpki-roots = { version = "1", optional = true }
pem = "3.0"
thiserror = "2"
x509-parser = "0.17"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
async-io = "2.4"
tokio = { version = "1.46", optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
axum-server = { version = "0.7", features = [
  "tls-rustls-no-provider",
], optional = true }
async-web-client = { version = "0.6", default-features = false }
http = "1.3"
blocking = "1.6"
tower-service = { version = "0.3", optional = true }

[dev-dependencies]
simple_logger = "5.0.0"
clap = { version = "3.2.25", features = ["derive"] }
axum = "0.8"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
warp = "0.3.7"
smol = "2.0.2"
tokio-rustls = { version = "0.26.2", default-features = false }
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"
hyper = "1.6.0"
http-body-util = "0.1.3"
bytes = "1.10.1"
hyper-util = "0.1.15"
rustls = { version = "0.23" }
rustls-platform-verifier = "0.6.0"
actix-web = { version = "4", features = ["actix-tls", "rustls-0_23"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_auto_cfg"]

[features]
default = ["aws-lc-rs", "tls12", "webpki-roots"]
ring = ["dep:ring", "async-web-client/ring", "rcgen/ring"]
aws-lc-rs = ["dep:aws-lc-rs", "async-web-client/aws-lc-rs", "rcgen/aws_lc_rs"]
axum = ["dep:axum-server", "tower"]
tower = ["dep:tower-service", "tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
tls12 = ["async-web-client/tls12"]
webpki-roots = ["dep:webpki-roots"]

[[example]]
name = "low_level_actix"

[[example]]
name = "low_level_axum"
required-features = ["axum"]

[[example]]
name = "low_level_axum_http01"
required-features = ["axum", "tower"]

[[example]]
name = "high_level_warp"
required-features = ["tokio"]

[[example]]
name = "high_level_tokio"
required-features = ["tokio"]

[[example]]
name = "high_level_hyper"
required-features = ["tokio"]
